$NetBSD: CHANGES,v 1.8972 2005/01/29 14:59:27 abs Exp $

Changes to the packages collection and infrastructure in 2005:

	Updated antiword to 0.36.1 [wiz 2005-01-01]
	Updated xquote to 2.6.10 [wiz 2005-01-01]
	Updated mysql-server to 4.0.22nb2 [minskim 2005-01-01]
	Updated mysql4-client to 4.1.7nb6 [minskim 2005-01-01]
	Updated mysql4-server to 4.1.7nb3 [minskim 2005-01-01]
	Updated mysql3-client to 3.23.58nb2 [minskim 2005-01-01]
	Updated mysql3-server to 3.23.58nb3 [minskim 2005-01-01]
	Updated eel to 1.0.1nb10 [minskim 2005-01-01]
	Updated libgnomeui to 2.8.0nb2 [minskim 2005-01-01]
	Updated papaya to 0.1.7nb1 [minskim 2005-01-01]
	Updated patchutils to 0.2.30nb1 [minskim 2005-01-01]
	Updated abiword-plugins to 2.0.14nb1 [minskim 2005-01-01]
	Updated conglomerate to 0.7.12nb6 [minskim 2005-01-01]
	Updated grap to 1.30nb1 [minskim 2005-01-01]
	Updated poptop to 1.2.1 [cube 2005-01-01]
	Updated automake to 1.9.4 [wiz 2005-01-01]
	Updated gnumeric14 to 1.4.1nb1 [minskim 2005-01-01]
	Updated monotone to 0.16 [jmmv 2005-01-01]
	Updated gramps to 1.0.8nb1 [minskim 2005-01-01]
	Updated texi2html to 1.64nb2 [minskim 2005-01-01]
	Updated apache2 to 2.0.52nb7 [minskim 2005-01-01]
	Updated ethereal to 0.10.8nb1 [minskim 2005-01-01]
	Updated wesnoth to 0.8.8 [wiz 2005-01-01]
	Added pppd-2.4.3 [cube 2005-01-02]
	Added mppe-lkm-0.0.4 [cube 2005-01-02]
	Removed ppp-mppe [cube 2005-01-02]
	Updated py-bsddb3 to 4.3.0 [seb 2005-01-02]
	Added bugzilla-2.18rc3 [adrianp 2005-01-02]
	Updated icecast to 2.2.0 [wiz 2005-01-02]
	Updated tcl-tclX to 8.3.5nb2 [minskim 2005-01-02]
	Updated tk-tclX to 8.3.5nb2 [minskim 2005-01-02]
	Updated gnucash to 1.8.10nb2 [wiz 2005-01-02]
	Updated apache2 to 2.0.52nb8 [minskim 2005-01-02]
	Updated xhfs to 3.2.6nb1 [minskim 2005-01-02]
	Updated ezmlm-idx to 0.432 [schmonz 2005-01-03]
	Updated getmail to 4.2.6 [schmonz 2005-01-03]
	Updated openoffice-linux to 1.1.4 [martti 2005-01-03]
	Updated curl to 7.12.3 [wiz 2005-01-03]